--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>my_chatroom</artifactId>
+    <artifactId>pt1</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>my_chatroom</name>
+    <name>pt1</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>1.8</java.version>
